--- a/OOPs.ipynb
+++ b/OOPs.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e0df74b-0975-494b-be1f-2dda4a3f033a",
+   "cell_type": "markdown",
+   "id": "ff2218db-a515-457d-892a-a3701597592a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Class"
+   ]
   },
   {
    "cell_type": "code",
@@ -274,12 +274,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c7d32cc-2f7d-4f12-b974-50f2772c4f41",
+   "cell_type": "markdown",
+   "id": "ee977f64-09b7-4134-ad57-d5bdaac24634",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Inharitance"
+   ]
   },
   {
    "cell_type": "code",
