--- a/OOPs.ipynb
+++ b/OOPs.ipynb
@@ -278,13 +278,168 @@
    "id": "ee977f64-09b7-4134-ad57-d5bdaac24634",
    "metadata": {},
    "source": [
-    "## Inharitance"
+    "## Inheritance In Python\n",
+    "Inheritance is a fundamental concept in Object-Oriented Programming (OOP) that allows a class to inherit attributes and methods from another class. This lesson covers single inheritance and multiple inheritance, demonstrating how to create and use them in Python.\n",
+    "\n",
+    "\n",
+    "Inheritance is a powerful feature in OOP that allows for code reuse and the creation of a more logical class structure. Single inheritance involves one base class, while multiple inheritance involves more than one base class. Understanding how to implement and use inheritance in Python will enable you to design more efficient and maintainable object-oriented programs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0ad7e745-76cd-4732-89f4-ea97d4d6ad46",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "## Inheritance (Single Inheritance)\n",
+    "## Parent class\n",
+    "class Car:\n",
+    "    def __init__(self,windows,doors,enginetype):\n",
+    "        self.windows=windows\n",
+    "        self.doors=doors\n",
+    "        self.enginetype=enginetype\n",
+    "    \n",
+    "    def drive(self):\n",
+    "        print(f\"The person will drive the {self.enginetype} car \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5d3f89ae-ab42-4246-bef4-96387713bb11",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The person will drive the petrol car \n"
+     ]
+    }
+   ],
+   "source": [
+    "car1=Car(4,5,\"petrol\")\n",
+    "car1.drive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "75f49bfb-102b-4a1b-950f-3bb584c91e09",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class Tesla(Car):\n",
+    "    def __init__(self,windows,doors,enginetype,is_selfdriving):\n",
+    "        super().__init__(windows,doors,enginetype)\n",
+    "        self.is_selfdriving=is_selfdriving\n",
+    "\n",
+    "    def selfdriving(self):\n",
+    "        print(f\"Tesla supports self driving : {self.is_selfdriving}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "84f6d646-7df7-48b4-b744-65dab0f132cd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla supports self driving : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla1=Tesla(4,5,\"electric\",True)\n",
+    "tesla1.selfdriving()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6a332ffb-efd7-4fc7-be8f-5d34308c23bb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The person will drive the electric car \n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla1.drive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4221fbe0-78f7-4c9e-99a4-09d07c8f54dd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buddy say woof\n",
+      "Owner:Piyush\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Multiple Inheritance\n",
+    "## When a class inherits from more than one base class.\n",
+    "## Base class 1\n",
+    "class Animal:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(\"Subclass must implement this method\")\n",
+    "\n",
+    "## BAse class 2\n",
+    "class Pet:\n",
+    "    def __init__(self, owner):\n",
+    "        self.owner = owner\n",
+    "\n",
+    "\n",
+    "##Derived class\n",
+    "class Dog(Animal,Pet):\n",
+    "    def __init__(self,name,owner):\n",
+    "        Animal.__init__(self,name)\n",
+    "        Pet.__init__(self,owner)\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} say woof\"\n",
+    "    \n",
+    "\n",
+    "## Create an object\n",
+    "dog=Dog(\"Buddy\",\"Piyush\")\n",
+    "print(dog.speak())\n",
+    "print(f\"Owner:{dog.owner}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ad7e745-76cd-4732-89f4-ea97d4d6ad46",
+   "id": "27f35852-fe62-43aa-b35f-668795a5fe6c",
    "metadata": {},
    "outputs": [],
    "source": []
